<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.AccountSubmitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/user_name"
            android:background="@drawable/bg_text_input"/>

        <TextView
            android:id="@+id/username_incorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_is_incorrect"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="18sp"
            android:layout_margin="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/password"
            android:background="@drawable/bg_text_input"/>

        <TextView
            android:id="@+id/password_incorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_is_incorrect"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textAlignment="center"
            android:text="@string/signup"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/bg_button_green_light"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textAlignment="center"
            android:text="@string/login"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/bg_button_green_light"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_underline"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_underline"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:text="@string/terms_and_condition"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loader"
        android:background="@color/transparentBlack"
        android:visibility="gone">

        <com.wang.avi.AVLoadingIndicatorView
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:indicatorName="BallSpinFadeLoaderIndicator"
            app:indicatorColor="@color/darkGray"/>

    </RelativeLayout>

</RelativeLayout>